--- a/mudamuda/assets/hiragana.plist
+++ b/mudamuda/assets/hiragana.plist
@@ -2,8 +2,10 @@
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
-	<key>all</key>
+	<key>basic</key>
 	<dict>
+		<key>n</key>
+		<string>ん</string>
 		<key>a</key>
 		<string>あ</string>
 		<key>i</key>
@@ -24,12 +26,6 @@
 		<string>け</string>
 		<key>ko</key>
 		<string>こ</string>
-		<key>kya</key>
-		<string>きゃ</string>
-		<key>kyu</key>
-		<string>きゅ</string>
-		<key>kyo</key>
-		<string>きょ</string>
 		<key>sa</key>
 		<string>さ</string>
 		<key>shi</key>
@@ -40,12 +36,6 @@
 		<string>せ</string>
 		<key>so</key>
 		<string>そ</string>
-		<key>sha</key>
-		<string>しゃ</string>
-		<key>shu</key>
-		<string>しゅ</string>
-		<key>sho</key>
-		<string>しょ</string>
 		<key>ta</key>
 		<string>た</string>
 		<key>chi</key>
@@ -56,12 +46,6 @@
 		<string>て</string>
 		<key>to</key>
 		<string>と</string>
-		<key>cha</key>
-		<string>ちゃ</string>
-		<key>chu</key>
-		<string>ちゅ</string>
-		<key>cho</key>
-		<string>ちょ</string>
 		<key>na</key>
 		<string>な</string>
 		<key>ni</key>
@@ -72,12 +56,6 @@
 		<string>ね</string>
 		<key>no</key>
 		<string>の</string>
-		<key>nya</key>
-		<string>にゃ</string>
-		<key>nyu</key>
-		<string>にゅ</string>
-		<key>nyo</key>
-		<string>にょ</string>
 		<key>ha</key>
 		<string>は</string>
 		<key>hi</key>
@@ -88,12 +66,6 @@
 		<string>へ</string>
 		<key>ho</key>
 		<string>ほ</string>
-		<key>hya</key>
-		<string>ひゃ</string>
-		<key>hyu</key>
-		<string>ひゅ</string>
-		<key>hyo</key>
-		<string>ひょ</string>
 		<key>ma</key>
 		<string>ま</string>
 		<key>mi</key>
@@ -104,12 +76,6 @@
 		<string>め</string>
 		<key>mo</key>
 		<string>も</string>
-		<key>mya</key>
-		<string>みゃ</string>
-		<key>myu</key>
-		<string>みゅ</string>
-		<key>myo</key>
-		<string>みょ</string>
 		<key>ya</key>
 		<string>や</string>
 		<key>yu</key>
@@ -126,16 +92,13 @@
 		<string>れ</string>
 		<key>ro</key>
 		<string>ろ</string>
-		<key>rya</key>
-		<string>りゃ</string>
-		<key>ryu</key>
-		<string>りゅ</string>
-		<key>ryo</key>
-		<string>りょ</string>
 		<key>wa</key>
 		<string>わ</string>
 		<key>wo</key>
 		<string>を</string>
+	</dict>
+	<key>marked</key>
+	<dict>
 		<key>ga</key>
 		<string>が</string>
 		<key>gi</key>
@@ -146,28 +109,16 @@
 		<string>げ</string>
 		<key>go</key>
 		<string>ご</string>
-		<key>gya</key>
-		<string>ぎゃ</string>
-		<key>gyu</key>
-		<string>ぎゅ</string>
-		<key>gyo</key>
-		<string>ぎょ</string>
 		<key>za</key>
 		<string>ざ</string>
 		<key>ji</key>
-		<string>ぢ</string>
+		<string>じ</string>
 		<key>zu</key>
 		<string>づ</string>
 		<key>ze</key>
 		<string>ぜ</string>
 		<key>zo</key>
 		<string>ぞ</string>
-		<key>ja</key>
-		<string>ぢゃ</string>
-		<key>ju</key>
-		<string>ぢゅ</string>
-		<key>jo</key>
-		<string>ぢょ</string>
 		<key>da</key>
 		<string>だ</string>
 		<key>de</key>
@@ -184,12 +135,6 @@
 		<string>べ</string>
 		<key>bo</key>
 		<string>ぼ</string>
-		<key>bya</key>
-		<string>びゃ</string>
-		<key>byu</key>
-		<string>びゅ</string>
-		<key>byo</key>
-		<string>びょ</string>
 		<key>pa</key>
 		<string>ぱ</string>
 		<key>pi</key>
@@ -200,6 +145,72 @@
 		<string>ぺ</string>
 		<key>po</key>
 		<string>ぽ</string>
+	</dict>
+	<key>double</key>
+	<dict>
+		<key>kya</key>
+		<string>きゃ</string>
+		<key>kyu</key>
+		<string>きゅ</string>
+		<key>kyo</key>
+		<string>きょ</string>
+		<key>sha</key>
+		<string>しゃ</string>
+		<key>shu</key>
+		<string>しゅ</string>
+		<key>sho</key>
+		<string>しょ</string>
+		<key>cha</key>
+		<string>ちゃ</string>
+		<key>chu</key>
+		<string>ちゅ</string>
+		<key>cho</key>
+		<string>ちょ</string>
+		<key>nya</key>
+		<string>にゃ</string>
+		<key>nyu</key>
+		<string>にゅ</string>
+		<key>nyo</key>
+		<string>にょ</string>
+		<key>hya</key>
+		<string>ひゃ</string>
+		<key>hyu</key>
+		<string>ひゅ</string>
+		<key>hyo</key>
+		<string>ひょ</string>
+		<key>mya</key>
+		<string>みゃ</string>
+		<key>myu</key>
+		<string>みゅ</string>
+		<key>myo</key>
+		<string>みょ</string>
+		<key>rya</key>
+		<string>りゃ</string>
+		<key>ryu</key>
+		<string>りゅ</string>
+		<key>ryo</key>
+		<string>りょ</string>
+	</dict>
+	<key>marked+double</key>
+	<dict>
+		<key>gya</key>
+		<string>ぎゃ</string>
+		<key>gyu</key>
+		<string>ぎゅ</string>
+		<key>gyo</key>
+		<string>ぎょ</string>
+		<key>ja</key>
+		<string>じゃ</string>
+		<key>ju</key>
+		<string>じゅ</string>
+		<key>jo</key>
+		<string>じょ</string>
+		<key>bya</key>
+		<string>びゃ</string>
+		<key>byu</key>
+		<string>びゅ</string>
+		<key>byo</key>
+		<string>びょ</string>
 		<key>pya</key>
 		<string>ぴゃ</string>
 		<key>pyu</key>
