swapped keys with values, づ should be dzu for both hiragana and katakana

--- a/mudamuda/assets/hiragana.plist
+++ b/mudamuda/assets/hiragana.plist
@@ -4,219 +4,221 @@
 <dict>
 	<key>basic</key>
 	<dict>
-		<key>n</key>
-		<string>ん</string>
-		<key>a</key>
-		<string>あ</string>
-		<key>i</key>
-		<string>い</string>
-		<key>u</key>
-		<string>う</string>
-		<key>e</key>
-		<string>え</string>
-		<key>o</key>
-		<string>お</string>
-		<key>ka</key>
-		<string>か</string>
-		<key>ki</key>
-		<string>き</string>
-		<key>ku</key>
-		<string>く</string>
-		<key>ke</key>
-		<string>け</string>
-		<key>ko</key>
-		<string>こ</string>
-		<key>sa</key>
-		<string>さ</string>
-		<key>shi</key>
-		<string>し</string>
-		<key>su</key>
-		<string>す</string>
-		<key>se</key>
-		<string>せ</string>
-		<key>so</key>
-		<string>そ</string>
-		<key>ta</key>
-		<string>た</string>
-		<key>chi</key>
-		<string>ち</string>
-		<key>tsu</key>
-		<string>つ</string>
-		<key>te</key>
-		<string>て</string>
-		<key>to</key>
-		<string>と</string>
-		<key>na</key>
-		<string>な</string>
-		<key>ni</key>
-		<string>に</string>
-		<key>nu</key>
-		<string>ぬ</string>
-		<key>ne</key>
-		<string>ね</string>
-		<key>no</key>
-		<string>の</string>
-		<key>ha</key>
-		<string>は</string>
-		<key>hi</key>
-		<string>ひ</string>
-		<key>fu</key>
-		<string>ふ</string>
-		<key>he</key>
-		<string>へ</string>
-		<key>ho</key>
-		<string>ほ</string>
-		<key>ma</key>
-		<string>ま</string>
-		<key>mi</key>
-		<string>み</string>
-		<key>mu</key>
-		<string>む</string>
-		<key>me</key>
-		<string>め</string>
-		<key>mo</key>
-		<string>も</string>
-		<key>ya</key>
-		<string>や</string>
-		<key>yu</key>
-		<string>ゆ</string>
-		<key>yo</key>
-		<string>よ</string>
-		<key>ra</key>
-		<string>ら</string>
-		<key>ri</key>
-		<string>り</string>
-		<key>ru</key>
-		<string>る</string>
-		<key>re</key>
-		<string>れ</string>
-		<key>ro</key>
-		<string>ろ</string>
-		<key>wa</key>
-		<string>わ</string>
-		<key>wo</key>
-		<string>を</string>
+		<key>ん</key>
+		<string>n</string>
+		<key>あ</key>
+		<string>a</string>
+		<key>い</key>
+		<string>i</string>
+		<key>う</key>
+		<string>u</string>
+		<key>え</key>
+		<string>e</string>
+		<key>お</key>
+		<string>o</string>
+		<key>か</key>
+		<string>ka</string>
+		<key>き</key>
+		<string>ki</string>
+		<key>く</key>
+		<string>ku</string>
+		<key>け</key>
+		<string>ke</string>
+		<key>こ</key>
+		<string>ko</string>
+		<key>さ</key>
+		<string>sa</string>
+		<key>し</key>
+		<string>shi</string>
+		<key>す</key>
+		<string>su</string>
+		<key>せ</key>
+		<string>se</string>
+		<key>そ</key>
+		<string>so</string>
+		<key>た</key>
+		<string>ta</string>
+		<key>ち</key>
+		<string>chi</string>
+		<key>つ</key>
+		<string>tsu</string>
+		<key>て</key>
+		<string>te</string>
+		<key>と</key>
+		<string>to</string>
+		<key>な</key>
+		<string>na</string>
+		<key>に</key>
+		<string>ni</string>
+		<key>ぬ</key>
+		<string>nu</string>
+		<key>ね</key>
+		<string>ne</string>
+		<key>の</key>
+		<string>no</string>
+		<key>は</key>
+		<string>ha</string>
+		<key>ひ</key>
+		<string>hi</string>
+		<key>ふ</key>
+		<string>fu</string>
+		<key>へ</key>
+		<string>he</string>
+		<key>ほ</key>
+		<string>ho</string>
+		<key>ま</key>
+		<string>ma</string>
+		<key>み</key>
+		<string>mi</string>
+		<key>む</key>
+		<string>mu</string>
+		<key>め</key>
+		<string>me</string>
+		<key>も</key>
+		<string>mo</string>
+		<key>や</key>
+		<string>ya</string>
+		<key>ゆ</key>
+		<string>yu</string>
+		<key>よ</key>
+		<string>yo</string>
+		<key>ら</key>
+		<string>ra</string>
+		<key>り</key>
+		<string>ri</string>
+		<key>る</key>
+		<string>ru</string>
+		<key>れ</key>
+		<string>re</string>
+		<key>ろ</key>
+		<string>ro</string>
+		<key>わ</key>
+		<string>wa</string>
+		<key>を</key>
+		<string>wo</string>
 	</dict>
 	<key>marked</key>
 	<dict>
-		<key>ga</key>
-		<string>が</string>
-		<key>gi</key>
-		<string>ぎ</string>
-		<key>gu</key>
-		<string>ぐ</string>
-		<key>ge</key>
-		<string>げ</string>
-		<key>go</key>
-		<string>ご</string>
-		<key>za</key>
-		<string>ざ</string>
-		<key>ji</key>
-		<string>じ</string>
-		<key>zu</key>
-		<string>づ</string>
-		<key>ze</key>
-		<string>ぜ</string>
-		<key>zo</key>
-		<string>ぞ</string>
-		<key>da</key>
-		<string>だ</string>
-		<key>de</key>
-		<string>で</string>
-		<key>do</key>
-		<string>ど</string>
-		<key>ba</key>
-		<string>ば</string>
-		<key>bi</key>
-		<string>び</string>
-		<key>bu</key>
-		<string>ぶ</string>
-		<key>be</key>
-		<string>べ</string>
-		<key>bo</key>
-		<string>ぼ</string>
-		<key>pa</key>
-		<string>ぱ</string>
-		<key>pi</key>
-		<string>ぴ</string>
-		<key>pu</key>
-		<string>ぷ</string>
-		<key>pe</key>
-		<string>ぺ</string>
-		<key>po</key>
-		<string>ぽ</string>
+		<key>が</key>
+		<string>ga</string>
+		<key>ぎ</key>
+		<string>gi</string>
+		<key>ぐ</key>
+		<string>gu</string>
+		<key>げ</key>
+		<string>ge</string>
+		<key>ご</key>
+		<string>go</string>
+		<key>ざ</key>
+		<string>za</string>
+		<key>じ</key>
+		<string>ji</string>
+		<key>ず</key>
+		<string>zu</string>
+		<key>ぜ</key>
+		<string>ze</string>
+		<key>ぞ</key>
+		<string>zo</string>
+		<key>づ</key>
+		<string>dzu</string>
+		<key>だ</key>
+		<string>da</string>
+		<key>で</key>
+		<string>de</string>
+		<key>ど</key>
+		<string>do</string>
+		<key>ば</key>
+		<string>ba</string>
+		<key>び</key>
+		<string>bi</string>
+		<key>ぶ</key>
+		<string>bu</string>
+		<key>べ</key>
+		<string>be</string>
+		<key>ぼ</key>
+		<string>bo</string>
+		<key>ぱ</key>
+		<string>pa</string>
+		<key>ぴ</key>
+		<string>pi</string>
+		<key>ぷ</key>
+		<string>pu</string>
+		<key>ぺ</key>
+		<string>pe</string>
+		<key>ぽ</key>
+		<string>po</string>
 	</dict>
 	<key>double</key>
 	<dict>
-		<key>kya</key>
-		<string>きゃ</string>
-		<key>kyu</key>
-		<string>きゅ</string>
-		<key>kyo</key>
-		<string>きょ</string>
-		<key>sha</key>
-		<string>しゃ</string>
-		<key>shu</key>
-		<string>しゅ</string>
-		<key>sho</key>
-		<string>しょ</string>
-		<key>cha</key>
-		<string>ちゃ</string>
-		<key>chu</key>
-		<string>ちゅ</string>
-		<key>cho</key>
-		<string>ちょ</string>
-		<key>nya</key>
-		<string>にゃ</string>
-		<key>nyu</key>
-		<string>にゅ</string>
-		<key>nyo</key>
-		<string>にょ</string>
-		<key>hya</key>
-		<string>ひゃ</string>
-		<key>hyu</key>
-		<string>ひゅ</string>
-		<key>hyo</key>
-		<string>ひょ</string>
-		<key>mya</key>
-		<string>みゃ</string>
-		<key>myu</key>
-		<string>みゅ</string>
-		<key>myo</key>
-		<string>みょ</string>
-		<key>rya</key>
-		<string>りゃ</string>
-		<key>ryu</key>
-		<string>りゅ</string>
-		<key>ryo</key>
-		<string>りょ</string>
+		<key>きゃ</key>
+		<string>kya</string>
+		<key>きゅ</key>
+		<string>kyu</string>
+		<key>きょ</key>
+		<string>kyo</string>
+		<key>しゃ</key>
+		<string>sha</string>
+		<key>しゅ</key>
+		<string>shu</string>
+		<key>しょ</key>
+		<string>sho</string>
+		<key>ちゃ</key>
+		<string>cha</string>
+		<key>ちゅ</key>
+		<string>chu</string>
+		<key>ちょ</key>
+		<string>cho</string>
+		<key>にゃ</key>
+		<string>nya</string>
+		<key>にゅ</key>
+		<string>nyu</string>
+		<key>にょ</key>
+		<string>nyo</string>
+		<key>ひゃ</key>
+		<string>hya</string>
+		<key>ひゅ</key>
+		<string>hyu</string>
+		<key>ひょ</key>
+		<string>hyo</string>
+		<key>みゃ</key>
+		<string>mya</string>
+		<key>みゅ</key>
+		<string>myu</string>
+		<key>みょ</key>
+		<string>myo</string>
+		<key>りゃ</key>
+		<string>rya</string>
+		<key>りゅ</key>
+		<string>ryu</string>
+		<key>りょ</key>
+		<string>ryo</string>
 	</dict>
 	<key>marked+double</key>
 	<dict>
-		<key>gya</key>
-		<string>ぎゃ</string>
-		<key>gyu</key>
-		<string>ぎゅ</string>
-		<key>gyo</key>
-		<string>ぎょ</string>
-		<key>ja</key>
-		<string>じゃ</string>
-		<key>ju</key>
-		<string>じゅ</string>
-		<key>jo</key>
-		<string>じょ</string>
-		<key>bya</key>
-		<string>びゃ</string>
-		<key>byu</key>
-		<string>びゅ</string>
-		<key>byo</key>
-		<string>びょ</string>
-		<key>pya</key>
-		<string>ぴゃ</string>
-		<key>pyu</key>
-		<string>ぴゅ</string>
-		<key>pyo</key>
-		<string>ぴょ</string>
+		<key>ぎゃ</key>
+		<string>gya</string>
+		<key>ぎゅ</key>
+		<string>gyu</string>
+		<key>ぎょ</key>
+		<string>gyo</string>
+		<key>じゃ</key>
+		<string>ja</string>
+		<key>じゅ</key>
+		<string>ju</string>
+		<key>じょ</key>
+		<string>jo</string>
+		<key>びゃ</key>
+		<string>bya</string>
+		<key>びゅ</key>
+		<string>byu</string>
+		<key>びょ</key>
+		<string>byo</string>
+		<key>ぴゃ</key>
+		<string>pya</string>
+		<key>ぴゅ</key>
+		<string>pyu</string>
+		<key>ぴょ</key>
+		<string>pyo</string>
 	</dict>
 </dict>
 </plist>
