--- a/mudamuda/assets/katakana.plist
+++ b/mudamuda/assets/katakana.plist
@@ -4,219 +4,221 @@
 <dict>
 	<key>basic</key>
 	<dict>
-		<key>a</key>
-		<string>ア</string>
-		<key>i</key>
-		<string>イ</string>
-		<key>u</key>
-		<string>ウ</string>
-		<key>e</key>
-		<string>エ</string>
-		<key>o</key>
-		<string>オ</string>
-		<key>ka</key>
-		<string>カ</string>
-		<key>ki</key>
-		<string>キ</string>
-		<key>ku</key>
-		<string>ク</string>
-		<key>ke</key>
-		<string>ケ</string>
-		<key>ko</key>
-		<string>コ</string>
-		<key>sa</key>
-		<string>サ</string>
-		<key>shi</key>
-		<string>シ</string>
-		<key>su</key>
-		<string>ス</string>
-		<key>se</key>
-		<string>セ</string>
-		<key>so</key>
-		<string>ソ</string>
-		<key>ta</key>
-		<string>タ</string>
-		<key>chi</key>
-		<string>チ</string>
-		<key>tsu</key>
-		<string>ツ</string>
-		<key>te</key>
-		<string>テ</string>
-		<key>to</key>
-		<string>ト</string>
-		<key>na</key>
-		<string>ナ</string>
-		<key>ni</key>
-		<string>ニ</string>
-		<key>nu</key>
-		<string>ヌ</string>
-		<key>ne</key>
-		<string>ネ</string>
-		<key>no</key>
-		<string>ノ</string>
-		<key>ha</key>
-		<string>ハ</string>
-		<key>hi</key>
-		<string>ヒ</string>
-		<key>fu</key>
-		<string>フ</string>
-		<key>he</key>
-		<string>ヘ</string>
-		<key>ho</key>
-		<string>ホ</string>
-		<key>ma</key>
-		<string>マ</string>
-		<key>mi</key>
-		<string>ミ</string>
-		<key>mu</key>
-		<string>ム</string>
-		<key>me</key>
-		<string>メ</string>
-		<key>mo</key>
-		<string>モ</string>
-		<key>ya</key>
-		<string>ヤ</string>
-		<key>yu</key>
-		<string>ユ</string>
-		<key>yo</key>
-		<string>ヨ</string>
-		<key>ra</key>
-		<string>ラ</string>
-		<key>ri</key>
-		<string>リ</string>
-		<key>ru</key>
-		<string>ル</string>
-		<key>re</key>
-		<string>レ</string>
-		<key>ro</key>
-		<string>ロ</string>
-		<key>wa</key>
-		<string>ワ</string>
-		<key>wo</key>
-		<string>ヲ</string>
-		<key>n</key>
-		<string>ン</string>
+		<key>ア</key>
+		<string>a</string>
+		<key>イ</key>
+		<string>i</string>
+		<key>ウ</key>
+		<string>u</string>
+		<key>エ</key>
+		<string>e</string>
+		<key>オ</key>
+		<string>o</string>
+		<key>カ</key>
+		<string>ka</string>
+		<key>キ</key>
+		<string>ki</string>
+		<key>ク</key>
+		<string>ku</string>
+		<key>ケ</key>
+		<string>ke</string>
+		<key>コ</key>
+		<string>ko</string>
+		<key>サ</key>
+		<string>sa</string>
+		<key>シ</key>
+		<string>shi</string>
+		<key>ス</key>
+		<string>su</string>
+		<key>セ</key>
+		<string>se</string>
+		<key>ソ</key>
+		<string>so</string>
+		<key>タ</key>
+		<string>ta</string>
+		<key>チ</key>
+		<string>chi</string>
+		<key>ツ</key>
+		<string>tsu</string>
+		<key>テ</key>
+		<string>te</string>
+		<key>ト</key>
+		<string>to</string>
+		<key>ナ</key>
+		<string>na</string>
+		<key>ニ</key>
+		<string>ni</string>
+		<key>ヌ</key>
+		<string>nu</string>
+		<key>ネ</key>
+		<string>ne</string>
+		<key>ノ</key>
+		<string>no</string>
+		<key>ハ</key>
+		<string>ha</string>
+		<key>ヒ</key>
+		<string>hi</string>
+		<key>フ</key>
+		<string>fu</string>
+		<key>ヘ</key>
+		<string>he</string>
+		<key>ホ</key>
+		<string>ho</string>
+		<key>マ</key>
+		<string>ma</string>
+		<key>ミ</key>
+		<string>mi</string>
+		<key>ム</key>
+		<string>mu</string>
+		<key>メ</key>
+		<string>me</string>
+		<key>モ</key>
+		<string>mo</string>
+		<key>ヤ</key>
+		<string>ya</string>
+		<key>ユ</key>
+		<string>yu</string>
+		<key>ヨ</key>
+		<string>yo</string>
+		<key>ラ</key>
+		<string>ra</string>
+		<key>リ</key>
+		<string>ri</string>
+		<key>ル</key>
+		<string>ru</string>
+		<key>レ</key>
+		<string>re</string>
+		<key>ロ</key>
+		<string>ro</string>
+		<key>ワ</key>
+		<string>wa</string>
+		<key>ヲ</key>
+		<string>wo</string>
+		<key>ン</key>
+		<string>n</string>
 	</dict>
 	<key>marked</key>
 	<dict>
-		<key>ga</key>
-		<string>ガ</string>
-		<key>gi</key>
-		<string>ギ</string>
-		<key>gu</key>
-		<string>グ</string>
-		<key>ge</key>
-		<string>ゲ</string>
-		<key>go</key>
-		<string>ゴ</string>
-		<key>za</key>
-		<string>ザ</string>
-		<key>ji</key>
-		<string>ジ</string>
-		<key>zu</key>
-		<string>ヅ</string>
-		<key>ze</key>
-		<string>ゼ</string>
-		<key>zo</key>
-		<string>ゾ</string>
-		<key>da</key>
-		<string>ダ</string>
-		<key>de</key>
-		<string>デ</string>
-		<key>do</key>
-		<string>ド</string>
-		<key>ba</key>
-		<string>バ</string>
-		<key>bi</key>
-		<string>ビ</string>
-		<key>bu</key>
-		<string>ブ</string>
-		<key>be</key>
-		<string>ベ</string>
-		<key>bo</key>
-		<string>ボ</string>
-		<key>pa</key>
-		<string>パ</string>
-		<key>pi</key>
-		<string>ピ</string>
-		<key>pu</key>
-		<string>プ</string>
-		<key>pe</key>
-		<string>ペ</string>
-		<key>po</key>
-		<string>ポ</string>
+		<key>ガ</key>
+		<string>ga</string>
+		<key>ギ</key>
+		<string>gi</string>
+		<key>グ</key>
+		<string>gu</string>
+		<key>ゲ</key>
+		<string>ge</string>
+		<key>ゴ</key>
+		<string>go</string>
+		<key>ザ</key>
+		<string>za</string>
+		<key>ジ</key>
+		<string>ji</string>
+		<key>ヅ</key>
+		<string>dzu</string>
+		<key>ズ</key>
+		<string>zu</string>
+		<key>ゼ</key>
+		<string>ze</string>
+		<key>ゾ</key>
+		<string>zo</string>
+		<key>ダ</key>
+		<string>da</string>
+		<key>デ</key>
+		<string>de</string>
+		<key>ド</key>
+		<string>do</string>
+		<key>バ</key>
+		<string>ba</string>
+		<key>ビ</key>
+		<string>bi</string>
+		<key>ブ</key>
+		<string>bu</string>
+		<key>ベ</key>
+		<string>be</string>
+		<key>ボ</key>
+		<string>bo</string>
+		<key>パ</key>
+		<string>pa</string>
+		<key>ピ</key>
+		<string>pi</string>
+		<key>プ</key>
+		<string>pu</string>
+		<key>ペ</key>
+		<string>pe</string>
+		<key>ポ</key>
+		<string>po</string>
 	</dict>
 	<key>double</key>
 	<dict>
-		<key>kya</key>
-		<string>キャ</string>
-		<key>kyu</key>
-		<string>キュ</string>
-		<key>kyo</key>
-		<string>キョ</string>
-		<key>sha</key>
-		<string>シャ</string>
-		<key>shu</key>
-		<string>シュ</string>
-		<key>sho</key>
-		<string>ショ</string>
-		<key>cha</key>
-		<string>チャ</string>
-		<key>chu</key>
-		<string>チュ</string>
-		<key>cho</key>
-		<string>チョ</string>
-		<key>nya</key>
-		<string>ニャ</string>
-		<key>nyu</key>
-		<string>ニュ</string>
-		<key>nyo</key>
-		<string>ニョ</string>
-		<key>hya</key>
-		<string>ヒャ</string>
-		<key>hyu</key>
-		<string>ヒュ</string>
-		<key>hyo</key>
-		<string>ヒョ</string>
-		<key>mya</key>
-		<string>ミャ</string>
-		<key>myu</key>
-		<string>ミュ</string>
-		<key>myo</key>
-		<string>ミョ</string>
-		<key>rya</key>
-		<string>リャ</string>
-		<key>ryu</key>
-		<string>リュ</string>
-		<key>ryo</key>
-		<string>リョ</string>
+		<key>キャ</key>
+		<string>kya</string>
+		<key>キュ</key>
+		<string>kyu</string>
+		<key>キョ</key>
+		<string>kyo</string>
+		<key>シャ</key>
+		<string>sha</string>
+		<key>シュ</key>
+		<string>shu</string>
+		<key>ショ</key>
+		<string>sho</string>
+		<key>チャ</key>
+		<string>cha</string>
+		<key>チュ</key>
+		<string>chu</string>
+		<key>チョ</key>
+		<string>cho</string>
+		<key>ニャ</key>
+		<string>nya</string>
+		<key>ニュ</key>
+		<string>nyu</string>
+		<key>ニョ</key>
+		<string>nyo</string>
+		<key>ヒャ</key>
+		<string>hya</string>
+		<key>ヒュ</key>
+		<string>hyu</string>
+		<key>ヒョ</key>
+		<string>hyo</string>
+		<key>ミャ</key>
+		<string>mya</string>
+		<key>ミュ</key>
+		<string>myu</string>
+		<key>ミョ</key>
+		<string>myo</string>
+		<key>リャ</key>
+		<string>rya</string>
+		<key>リュ</key>
+		<string>ryu</string>
+		<key>リョ</key>
+		<string>ryo</string>
 	</dict>
 	<key>marked+double</key>
 	<dict>
-		<key>gya</key>
-		<string>ギャ</string>
-		<key>gyu</key>
-		<string>ギュ</string>
-		<key>gyo</key>
-		<string>ギョ</string>
-		<key>ja</key>
-		<string>ジャ</string>
-		<key>ju</key>
-		<string>ジュ</string>
-		<key>jo</key>
-		<string>ジョ</string>
-		<key>bya</key>
-		<string>ビャ</string>
-		<key>byu</key>
-		<string>ビュ</string>
-		<key>byo</key>
-		<string>ビョ</string>
-		<key>pya</key>
-		<string>ピャ</string>
-		<key>pyu</key>
-		<string>ピュ</string>
-		<key>pyo</key>
-		<string>ピョ</string>
+		<key>ギャ</key>
+		<string>gya</string>
+		<key>ギュ</key>
+		<string>gyu</string>
+		<key>ギョ</key>
+		<string>gyo</string>
+		<key>ジャ</key>
+		<string>ja</string>
+		<key>ジュ</key>
+		<string>ju</string>
+		<key>ジョ</key>
+		<string>jo</string>
+		<key>ビャ</key>
+		<string>bya</string>
+		<key>ビュ</key>
+		<string>byu</string>
+		<key>ビョ</key>
+		<string>byo</string>
+		<key>ピャ</key>
+		<string>pya</string>
+		<key>ピュ</key>
+		<string>pyu</string>
+		<key>ピョ</key>
+		<string>pyo</string>
 	</dict>
 </dict>
 </plist>
