--- a/mudamuda/mudamuda-Info.plist
+++ b/mudamuda/mudamuda-Info.plist
@@ -8,8 +8,12 @@
 	<string>Conjugation</string>
 	<key>CFBundleExecutable</key>
 	<string>${EXECUTABLE_NAME}</string>
+	<key>CFBundleIcons</key>
+	<array>
+		<string>AppIcon120x120</string>
+	</array>
 	<key>CFBundleIdentifier</key>
-	<string>com.freezedpeanuts.${PRODUCT_NAME:rfc1034identifier}</string>
+	<string>com.freezedpeanuts.$(PRODUCT_NAME:rfc1034identifier)</string>
 	<key>CFBundleInfoDictionaryVersion</key>
 	<string>6.0</string>
 	<key>CFBundleName</key>
